Bug 297657 - Ctrl-'+'/'-' shortcuts work wrong when canvas is rotated
Summary: Ctrl-'+'/'-' shortcuts work wrong when canvas is rotated
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-07 14:15 UTC by Dmitry Kazakov
Modified: 2012-10-02 16:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2012-04-07 14:15:56 UTC
This happens because KoZoomController has wrong information about the size of the document.
Comment 1 Dmitry Kazakov 2012-04-08 10:00:10 UTC
Git commit d4a545447173e66253be49613436799a5f90e912 by Dmitry Kazakov.
Committed on 08/04/2012 at 11:59.
Pushed by dkazakov into branch 'zoom-pan-testing-kazakov'.

Fixed zooming of the rotated canvas

Now the zooming process is much easier to understand than it used to be.
No additional pan is needed in various places.

FitPage and FitWidth now work for rotated images as well

M  +15   -10   krita/plugins/tools/defaulttools/kis_tool_pan.cpp
M  +2    -0    krita/plugins/tools/defaulttools/kis_tool_pan.h
M  +1    -44   krita/ui/canvas/kis_canvas2.cpp
M  +0    -8    krita/ui/canvas/kis_canvas2.h
M  +55   -2    krita/ui/canvas/kis_canvas_controller.cpp
M  +14   -0    krita/ui/canvas/kis_canvas_controller.h
M  +46   -4    krita/ui/canvas/kis_coordinates_converter.cpp
M  +6    -4    krita/ui/canvas/kis_coordinates_converter.h
M  +7    -7    krita/ui/kis_view2.cpp
M  +24   -5    krita/ui/kis_zoom_manager.cc
M  +46   -8    krita/ui/tests/kis_zoom_and_pan_test.cpp
M  +4    -1    krita/ui/tests/kis_zoom_and_pan_test.h
M  +20   -13   libs/widgets/KoZoomController.cpp
M  +3    -0    libs/widgets/KoZoomController.h

http://commits.kde.org/calligra/d4a545447173e66253be49613436799a5f90e912
Comment 2 Dmitry Kazakov 2012-10-02 16:36:25 UTC
Git commit dc6842db89bc22ee169d97a1db9fa177b75dde19 by Dmitry Kazakov.
Committed on 02/10/2012 at 14:36.
Pushed by dkazakov into branch 'calligra/2.5'.

Fixed zooming of the rotated canvas

Now the zooming process is much easier to understand than it used to be.
No additional pan is needed in various places.

FitPage and FitWidth now work for rotated images as well

Conflicts:

	krita/ui/canvas/kis_canvas2.cpp
	krita/ui/canvas/kis_canvas2.h

M  +15   -10   krita/plugins/tools/defaulttools/kis_tool_pan.cpp
M  +2    -0    krita/plugins/tools/defaulttools/kis_tool_pan.h
M  +1    -44   krita/ui/canvas/kis_canvas2.cpp
M  +0    -8    krita/ui/canvas/kis_canvas2.h
M  +55   -2    krita/ui/canvas/kis_canvas_controller.cpp
M  +14   -0    krita/ui/canvas/kis_canvas_controller.h
M  +46   -4    krita/ui/canvas/kis_coordinates_converter.cpp
M  +6    -4    krita/ui/canvas/kis_coordinates_converter.h
M  +7    -7    krita/ui/kis_view2.cpp
M  +24   -5    krita/ui/kis_zoom_manager.cc
M  +46   -8    krita/ui/tests/kis_zoom_and_pan_test.cpp
M  +4    -1    krita/ui/tests/kis_zoom_and_pan_test.h
M  +20   -13   libs/widgets/KoZoomController.cpp
M  +3    -0    libs/widgets/KoZoomController.h

http://commits.kde.org/calligra/dc6842db89bc22ee169d97a1db9fa177b75dde19