Fixed zooming of the rotated canvas

Now the zooming process is much easier to understand than it used to be.
No additional pan is needed in various places.

FitPage and FitWidth now work for rotated images as well

BUG:297657

Conflicts:

	krita/ui/canvas/kis_canvas2.cpp
	krita/ui/canvas/kis_canvas2.h