krita/ui/canvas/kis_canvas2.h
@@ -149,7 +149,6 @@ public: // KisCanvas2 methods
 signals:
 
     void documentOriginChanged();
-    void scrollAreaSizeChanged();
 
     void imageChanged(KisImageWSP image);
 
@@ -176,15 +175,8 @@ public slots:
     /// adjust the origin of the document
     void adjustOrigin();
 
-    /// slot for setting the mirroring
-    void mirrorCanvas(bool mirror);
     /// canvas rotation in degrees
     qreal rotationAngle() const;
-    void rotateCanvas(qreal angle, bool updateOffset=true);
-    void rotateCanvasRight15();
-    void rotateCanvasLeft15();
-    void resetCanvasTransformations();
-
     void setSmoothingEnabled(bool smooth);
 
 private slots:
